Fixed Overflow Styling for Navigation

--- a/src/Components/Sidebar/style.sass
+++ b/src/Components/Sidebar/style.sass
@@ -7,9 +7,6 @@
   flex-direction: column
   grid-area: sidebar
 
-  &__header
-    margin-bottom: 16px
-
   &__serverTitle
     background-color: darken($color-dark, 5)
     border-bottom: $border-general
@@ -24,6 +21,8 @@
 
   &__navigation
     flex-grow: 1
+    overflow: auto
+    padding-top: 16px
 
   &__serverNavigation
     border-top: $border-general
